--------------------------------------------------------------------------------
 Fusion 1.212 - June 30th, 2004
--------------------------------------------------------------------------------
- 06-27-04: Fixed #1007 - Fly/Butterfly Wings are allowed to be used under attack. [AlexKreuz]
- 06-27-04: Fixed #1006 - User can walk all the way across the screen (30 tiles, not 15). [AlexKreuz]
- 06-27-04: Fixed Meteor Storm for Monsters.  [Darkhelmet]
- 06-26-04: Gungnir caused crash on bash fail. [AlexKreuz]
- 06-26-04: Zephyris thunder-storm now uses target coordinates, not player. [AlexKreuz]
- 06-26-04: Insane amount of int caused crash due to too much dmg in skills. [AlexKreuz]
- 06-26-04: Fixed #1001 - Weapons' auto-castings did not work in PVP. [AlexKreuz]
- 06-26-04: Fixed #1000 - Gungnir with attack-type skills caused Unknown-Skill crash. [AlexKreuz]
- 06-26-04: Fixed #999 - Skill cards would not add skills to list. [AlexKreuz]
- 06-26-04: Fixed #924 - Double Strafe doubling damage each fatal kill on PVP. [AlexKreuz]
- 06-25-04: Uncapped ASPD to 199. [AlexKreuz]
- 06-25-04: Uncapped #changestat to max 32767. [AlexKreuz]
- 06-25-04: Uncapped #jlevel to max 32767. [AlexKreuz]
- 06-25-04: Uncapped #blevel to max 32767. [AlexKreuz]
- 06-25-04: Uncapped #charblevel to max 32767. [AlexKreuz]
- 06-25-04: Uncapped #charjlevel to max 32767. [AlexKreuz]
- 06-25-04: Uncapped #blevel to max 32767. [AlexKreuz]
- 06-25-04: Added #superstats ALBGM command. Set all stats to 32767. [AlexKreuz]
- 06-25-04: Fixed #783 - Crazy Uproar supposed to give +4 STR, not +5. [AlexKreuz]
- 06-25-04: Fixed crash on die due to fix #994. [AlexKreuz]
- 06-25-04: Fixed #992 - Chara may not warp/exit for 10 seconds after damage. [AlexKreuz]
- 06-25-04: Added to Globals.pas -> message_blue. [AlexKreuz]
- 06-25-04: Added to Globals.pas -> message_yellow. [AlexKreuz]
- 06-25-04: Added to Globals.pas -> message_green. [AlexKreuz]
- 06-25-04: Added to Globals.pas -> check_attack_lag. [AlexKreuz]