@@ -3,15 +3,22 @@ unit Globals;
 interface
 
 uses
-    MMSystem,
-    Common;
+    MMSystem, Classes, SysUtils,
+    Common,
+    Zip, List32;
 
     function check_attack_lag(tc : TChara) : Boolean;
+
     procedure message_green(tc : TChara; str : String);
     procedure message_yellow(tc : TChara; str : String);
     procedure message_blue(tc : TChara; str : String);
 
+    procedure backup_txt_database();
+
 implementation
+
+uses
+	Main;
 
     function check_attack_lag(tc : TChara) : Boolean;
     begin
@@ -47,5 +54,36 @@ implementation
         tc.Socket.SendBuf(buf, length(str) + 9);
     end;
 
+    procedure backup_txt_database();
+    var
+	    zfile :TZip;
+    	fileslist :TStringList;
+	    filename :string;
+    begin
+	    DateSeparator      := '-';
+    	TimeSeparator      := '-';
+	    ShortDateFormat    := 'yyyy/mm/dd';
+    	LongTimeFormat    := 'hh:mm:ss';
+
+	    filename := datetostr(date) + ' - ' +timetostr(time);
+
+    	CreateDir('backup');
+	    zfile := tzip.create(frmMain);
+    	zfile.Filename := AppPath + 'backup\' + filename + '.zip';
+
+	    fileslist := tstringlist.Create;
+    	fileslist.Add(AppPath + 'chara.txt');
+	    fileslist.Add(AppPath + 'gcastle.txt');
+    	fileslist.Add(AppPath + 'guild.txt');
+	    fileslist.Add(AppPath + 'party.txt');
+    	fileslist.Add(AppPath + 'pet.txt');
+	    fileslist.Add(AppPath + 'player.txt');
+
+	    zfile.FileSpecList := fileslist;
+    	zfile.Add;
+	    zfile.Free;
+
+    	fileslist.Free;
+    end;
+
 end.
- 
